<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_abu"
    tools:context="com.yondev.shoppinglist.AddDaftarActivity">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/bg"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/coklat"
            android:layout_marginTop="16dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"
            android:text="@string/nama_daftar" />

        <RelativeLayout android:layout_width="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:maxWidth="300dp"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/rounded_layout_white_s"
                android:ems="10"
                android:hint="@string/masukan_daftar"
                android:gravity="left|center_vertical"
                android:textSize="18dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_toLeftOf="@+id/btnList"
                android:inputType="textPersonName" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/coklat"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"
            android:text="@string/tanggal_belanja" />

        <RelativeLayout android:layout_width="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:maxWidth="300dp"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/rounded_layout_white_s"
                android:ems="10"
                android:hint="@string/masukan_tanggal"
                android:gravity="left|center_vertical"
                android:textSize="18dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="38dp"
                android:descendantFocusability="blocksDescendants"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:inputType="textPersonName" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:adjustViewBounds="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:layout_alignParentRight="true"
                app:srcCompat="@mipmap/ic_date_range_black_24dp" />


        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:weightSum="1">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/putih"
            android:textSize="20dp"
            android:background="@drawable/btn_coklat"
            android:text="@string/tambah_barang" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:layout_weight="1"
            android:textColor="@color/putih"
            android:textSize="20dp"
            android:background="@drawable/btn_merah"
            android:text="@string/simpan" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:textColor="@color/abu"
        android:textSize="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/klik_tambah_barang" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_above="@+id/bottomWrapper"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/adViewContainer"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"

        android:layout_height="50dp"
        />

</RelativeLayout>
