<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_abu"
    tools:context="com.yondev.shoppinglist.MainActivity">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/bg"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/coklat"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/daftar_belanja" />

        <RelativeLayout android:layout_width="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:maxWidth="300dp"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/rounded_layout_white"
                android:ems="10"
                android:hint="@string/cari_daftar"
                android:gravity="center"
                android:textSize="18dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="38dp"
                android:inputType="textPersonName" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:adjustViewBounds="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:layout_alignParentRight="true"
                app:srcCompat="@mipmap/ic_search_black_24dp" />



        </RelativeLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:textColor="@color/abu"
        android:textSize="18dp"
        android:text="@string/belum_ada_daftar" />


    <ListView
        android:id="@+id/listview"
        android:layout_below="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnTambah"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnTambah"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_coklat"
        android:textColor="@color/putih"
        android:textSize="20dp"
        android:text="@string/buat_daftar" />

</RelativeLayout>
